--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,38 +28,37 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
-      </div>
+        <h1>About Us</h1>
+        Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.      </div>
       <div style="display: flex;flex-direction: row; margin:auto">
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+        <div class="card" style="width: 30%; margin: 1%;">
+            <img class="card-img-top" src="/static/person1.jpg" alt="Card image">
+            <div class="card-body">
+                <p class="title">John Smith</p>
+                <p>General Manager</p>
+                <p class="card-text">With over 15 years of experience in the automotive industry, John ensures every customer receives the best possible service.</p>
+                <p>john.smith@bestcars.com</p>
+            </div>
         </div>
-      </div>
+        <div class="card" style="width: 30%; margin: 1%;">
+            <img class="card-img-top" src="/static/person2.jpg" alt="Card image">
+            <div class="card-body">
+                <p class="title">Maria Gonzalez</p>
+                <p>Sales Consultant</p>
+                <p class="card-text">Maria specializes in helping families and first-time buyers find the right vehicle that fits their lifestyle and budget.</p>
+                <p>maria.gonzalez@bestcars.com</p>
+            </div>
+            </div>
 
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+            <div class="card" style="width: 30%; margin: 1%;">
+            <img class="card-img-top" src="/static/person3.jpg" alt="Card image">
+            <div class="card-body">
+                <p class="title">David Johnson</p>
+                <p>Service Manager</p>
+                <p class="card-text">David leads our service department, making sure every car that leaves our shop is safe, reliable, and ready for the road.</p>
+                <p>david.johnson@bestcars.com</p>
+            </div>
         </div>
-      </div>
-
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
-        </div>
-      </div>
     </div>
     </div>
     </div>
